[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/SamPlayArea.gd" type="Script" id=1]
[ext_resource path="res://fonts/Built/Ubuntu_B_72.tres" type="FontFile" id=2]
[ext_resource path="res://Sprites/PlayIcon.png" type="Texture2D" id=3]


[node name="SamPlayArea" type="VBoxContainer"]
offset_left = 460.0
offset_right = 1460.0
offset_bottom = 114.0
custom_minimum_size = Vector2( 1000, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="PlayButton" type="Button" parent="."]
offset_right = 1000.0
offset_bottom = 94.0
tooltip_text = "Play the game
Hover `Play` to close more menu drawer
Hover `More` to open more menu drawer"
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/font_color = Color( 0.00784314, 0.752941, 0, 1 )
text = "Play"

[node name="PlayIcon" type="TextureRect" parent="PlayButton"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="MoreButton" type="Button" parent="."]
offset_top = 102.0
offset_right = 1000.0
offset_bottom = 135.0
tooltip_text = "Hover to open more menu drawer"
focus_mode = 0
focus_mode = 0
text = "More"
[connection signal="focus_entered" from="PlayButton" to="." method="_on_PlayButton_focus_entered"]
[connection signal="focus_exited" from="PlayButton" to="." method="_on_PlayButton_focus_exited"]
[connection signal="mouse_entered" from="PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_PlayButton_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="MoreButton" to="." method="_on_MoreButton_mouse_entered"]
